--- a/app.css
+++ b/app.css
@@ -1,14 +1,20 @@
+@font-face {
+  font-family: "myFont"; /* IE9 Compat Modes */
+  src: url("./resources/fonts/Lato-Regular.ttf"); /* Super Modern Browsers */
+}
 body,
 h1,
 h2,
 h3 {
   margin: 0;
   padding: 0;
+  font-family: myFont;
 }
 body {
   background-color: #ecf0f0;
 }
-button {
+button,
+input {
   outline: none;
 }
 .revenue-minimun {
@@ -21,7 +27,6 @@ button {
 }
 .revenue-minimun > .half-box > .revenue-title {
   color: #4d4e4e;
-  font-family: Arial;
   font-size: 1.2rem;
   font-weight: 900;
 }
@@ -38,6 +43,8 @@ button {
   width: 100%;
 }
 .content-size > .box-style > .input-size {
+  font-family: myFont;
+  color: #bebebe;
   display: block;
   margin: 0 auto;
   margin-bottom: 2rem;
@@ -46,11 +53,30 @@ button {
 }
 .content-size > .box-style > .input-size > .input-style {
   border-radius: 0.3rem;
-  border: 1px solid #b2b5b5;
-  height: 2rem;
+  border: 0.09rem solid #b2b5b5;
+  padding-left: 0.9rem;
+  box-sizing: border-box;
+  font-size: 1.3rem;
+  height: 2.2rem;
   width: 100%;
 }
 .content-size > .box-style > .input-size > .second-input {
   border: 1px solid #b2b5b5;
+  padding-right: 0.9rem;
+  box-sizing: border-box;
+  text-align: right;
   width: 75%;
+}
+.content-size > .box-style > .stores-pages {
+  margin-top: 1rem;
+  text-align: center;
+}
+.content-size > .box-style > .stores-pages > button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.content-size > .box-style > .stores-pages > button > .image-style {
+  width: 0.8rem;
 }
