--- a/components/header/Header.css
+++ b/components/header/Header.css
@@ -1,14 +1,18 @@
+@font-face {
+  font-family: "MyWebFont"; /* IE9 Compat Modes */
+  src: url("../../resources/fonts/Lato-Bold.ttf"); /* Super Modern Browsers */
+}
+
 .header-style {
   align-items: center;
   background-color: #3480b2;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.3);
   display: flex;
   height: 4rem;
   padding-left: 3rem;
 }
 .header-style > .header-title {
   color: #fff;
-  font-family: Arial;
+  font-family: MyWebFont;
   font-size: 1.7rem;
-  font-weight: 800;
 }
