--- a/components/storesList/StoresList.css
+++ b/components/storesList/StoresList.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "myFont"; /* IE9 Compat Modes */
+  src: url("../../resources/fonts/Lato-Regular.ttf"); /* Super Modern Browsers */
+}
+
 .list-style {
   border-radius: 0.3rem;
   margin: 0 auto;
@@ -14,9 +19,9 @@
   margin: 0 auto;
   padding: 0;
   font-size: 0.5rem;
-  font-family: Arial;
-  font-weight: 900;
+  font-family: myFont;
   height: auto;
+  font-weight: 100;
 }
 .list-style > .ul-position > .item-list {
   align-items: center;
@@ -29,7 +34,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  width: 90%;
+  width: 95%;
 }
 .list-style > .ul-position > .item-list > .item-style > .revenue-style {
   margin-right: 1rem;
